# grpcdemo

./: .gitignore  Makefile  go.mod  go.sum
client/: client.go
grpcoveruds/: Makefile  go.mod  go.sum
grpcoveruds/client/: client.go  client_darwin.go  client_windows.go
grpcoveruds/proto/: echo.pb.go  echo.proto  echo_grpc.pb.go
grpcoveruds/proto/echopb/: echo.pb.go  echo_grpc.pb.go
grpcoveruds/server/: server.go  server_darwin.go  server_windows.go
grpcstatus/: Makefile
grpcstatus/client/: client.go
grpcstatus/proto/tray/: status.proto
grpcstatus/proto/tray/statuspb/: status.pb.go  status_grpc.pb.go
grpcstatus/server/: server.go
grpcstatus/server-cpp/: CMakeLists.txt  server.cpp
proto/tray/: status.proto
proto/tray/statuspb/: status.pb.go  status_grpc.pb.go
server/: server.go
